name:                concurrency-verification
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/benjaminselfridge/concurrency-verification#readme
license:             BSD3
license-file:        LICENSE
author:              Ben Selfridge
maintainer:          benselfridge@galois.com
copyright:           March 2018
category:            RISC-V
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cv-peterson
  hs-source-dirs:      src
  main-is:             MainPeterson.hs
  other-modules:       Garbage.Peterson
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
